// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecipeTableListingRowu should render with right amount of elements for favorite recipes 1`] = `
<tr>
  <td
    className="my-recipe__manage--table___name"
  >
    <Link
      replace={false}
      to="/recipe/2"
    >
      Jollof Rice
    </Link>
  </td>
  <td
    className="my-recipe__manage--table___action"
  >
    <button
      onClick={[Function]}
    >
      <i
        className="mdi mdi-delete"
      />
    </button>
  </td>
</tr>
`;

exports[`RecipeTableListingRowu should render with right amount of elements for personal-recipe 1`] = `
<tr>
  <td
    className="my-recipe__manage--table___name"
  >
    <Link
      replace={false}
      to="/recipe/2"
    >
      Jollof Rice
    </Link>
  </td>
  <td
    className="my-recipe__manage--table___action"
  >
    <Link
      replace={false}
      to={
        Object {
          "pathname": "/user/1/modify-recipe",
          "state": Object {
            "index": 1,
            "recipe": Object {
              "User": Object {
                "fullname": "example user",
                "id": 2,
                "username": null,
              },
              "createdAt": "2017-10-23T08:08:47.566Z",
              "description": "It is simply better than ghanian jollof",
              "downVoteCount": 1,
              "favoriteCount": 3,
              "id": 2,
              "img_url": "http://www.africanbites.com/wp-content/uploads/2014/05/IMG_9677-2-1-150x150.jpg",
              "ingredients": Array [
                "rice",
                "canola oil",
              ],
              "instructions": Array [
                "Break up the clumpy rice before starting.",
                "Garnish with chopped scallion and serve",
              ],
              "name": "Jollof Rice",
              "owner": 2,
              "upVoteCount": 3,
              "updatedAt": "2018-01-16T10:02:13.814Z",
              "viewCount": 6,
            },
          },
        }
      }
    >
      <i
        className="mdi mdi-wrench"
      />
    </Link>
    <button
      onClick={[Function]}
    >
      <i
        className="mdi mdi-delete"
      />
    </button>
  </td>
</tr>
`;
